fix: more spacing issues for better dividing between sub sections

--- a/src/app/components/aboutus/cyber.aboutus.component.scss
+++ b/src/app/components/aboutus/cyber.aboutus.component.scss
@@ -1,8 +1,21 @@
 .aboutus-image {
   margin: 0;
-  margin:0 auto;
+  margin: 0 auto;
   width: 60%;
 }
 .aboutus-content {
   margin-top: 15%;
+}
+@media (max-width: 991px) {
+  .aboutus-content {
+    margin-top: 0%;
+  }
+  .about {
+    img {
+      margin: 0 auto;
+      margin-bottom: 10%;
+    }
+
+    text-align: center;
+  }
 }
