--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -218,15 +218,6 @@
     text-align: center;
   }
 
-  .about {
-    img {
-      margin: 0 auto;
-      margin-bottom: 20%;
-    }
-
-    text-align: center;
-  }
-
   .portfolio,
   .blog {
     text-align: center;
